menu underline animation (have bug on safari)

--- a/css/main.css
+++ b/css/main.css
@@ -570,19 +570,14 @@ body {
       width: 1024px; } }
   @media (max-width: 1024px) {
     #header {
-      width: calc(100% - 100px);
+      width: auto;
       margin: 0 50px; } }
   @media (max-width: 767px) {
     #header {
-      width: calc(100% - 34px);
       margin: 0 17px; } }
   @media screen and (max-width: 960px) and (max-height: 600px) {
     #header {
       margin: 0 17px; } }
-  @media (min-width: 1025px) {
-    #header {
-      transform: translateX(-50%);
-      left: 50%; } }
   #header .logo {
     position: absolute;
     left: 88px;
@@ -652,7 +647,8 @@ body {
     -ms-transition: max-height 0.3s ease-out;
     transition: max-height 0.3s ease-out;
     padding: 33px 7% 0;
-    font-size: 0; }
+    font-size: 0;
+    position: relative; }
     .menu ul li {
       display: inline-block; }
       .menu ul li > a {
@@ -670,11 +666,20 @@ body {
         border-bottom: 2px solid #364e6e; }
         .menu ul li.active > a:hover {
           text-decoration: none; }
+  .menu .moving-underline {
+    position: absolute;
+    bottom: 0;
+    transition: .3s ease-in-out;
+    width: 100px;
+    height: 2px;
+    transform: translateX(0);
+    border-bottom: 2px solid #364e6e; }
 
 @media (max-width: 1024px) {
   #header {
     height: 118px;
-    padding-top: 40px; }
+    padding-top: 40px;
+    width: calc(100% - 100px); }
     #header .logo {
       left: 40px; }
   .menu {
@@ -707,7 +712,9 @@ body {
           color: #364e6e;
           border-bottom: none; }
     .menu-open .menu ul {
-      max-height: 550px; } }
+      max-height: 550px; }
+    .menu .moving-underline {
+      display: none; } }
 
 .btn-menu {
   position: absolute;
@@ -832,7 +839,8 @@ body {
 @media (max-width: 767px) {
   #header {
     height: 98px;
-    padding-top: 20px; }
+    padding-top: 20px;
+    width: calc(100% - 34px); }
   .menu {
     top: 20px; }
     .menu ul li > a {
@@ -846,6 +854,11 @@ body {
     padding-top: 20px; }
   .menu {
     top: 20px; } }
+
+@media (min-width: 1025px) {
+  #header {
+    transform: translateX(-50%);
+    left: 50%; } }
 
 /* =========================
    Content
@@ -949,6 +962,10 @@ body {
     display: inline-block;
     vertical-align: middle;
     margin: 0 8px; }
+
+.stop-scrolling {
+  height: 100%;
+  overflow: hidden; }
 
 /* ---------------
     Buttons
@@ -6014,10 +6031,5 @@ div.mission-text-slider {
     -webkit-transform-origin: left center; }
   .mission-tabs li {
     margin-right: 10px; } }
-
-.stop-scrolling {
-  height: 100%;
-  overflow: hidden;
-}
 
 /*# sourceMappingURL=main.css.map */
