--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -133,6 +133,7 @@ body {
         @include transition(max-height, 0.3s, ease-out);
         padding: 33px 7% 0;
         font-size: 0;
+        position: relative;
 
         li {
             display: inline-block;
@@ -162,13 +163,24 @@ body {
             }
         }
     }
+    .moving-underline {
+        position: absolute;
+        bottom: 0;
+        transition: .3s ease-in-out;
+        width: 100px;
+        height: 2px;
+        transform: translateX(0);
+        border-bottom: 2px solid #364e6e;
+    }
 }
+
 
 @include tablet {
 
     #header {
         height: $header-height-tbl;
         padding-top: 40px;
+        width: calc(100% - 100px);
 
         .logo {
             left: 40px;
@@ -212,6 +224,9 @@ body {
 
         .menu-open & ul {
             max-height: 550px;
+        }
+        .moving-underline {
+            display: none;
         }
     }
 }
@@ -357,6 +372,7 @@ body {
     #header {
         height: $header-height-mob;
         padding-top: 20px;
+        width: calc(100% - 34px);
     } 
 
     .menu {
@@ -384,7 +400,12 @@ body {
         top: 20px;
     }
 }
-
+@media (min-width: 1025px) {
+    #header {
+      transform: translateX(-50%);
+      left: 50%; 
+    } 
+}
 
 
 /* =========================
@@ -396,6 +417,7 @@ body {
     overflow: hidden;
     height: calc( 100vh - #{$header-height});
     height: -webkit-calc( 100vh - #{$header-height});
+    margin-top: $header-height;
 
     @include tablet {
         height: calc( 100vh - #{$header-height-tbl});
@@ -528,4 +550,9 @@ body {
         vertical-align: middle;    
         margin: 0 8px;
     }
+}
+
+.stop-scrolling {
+    height: 100%;
+    overflow: hidden;
 }
